Guess xapian-core source code directory during configure

--- a/configure.ac
+++ b/configure.ac
@@ -11,24 +11,36 @@ LT_INIT
 
 AM_INIT_AUTOMAKE([subdir-objects])
 
+AC_ARG_VAR(XAPIAN_SRCDIR, Location of the xapian-core source code directory)
+
+# Check for Xapian source code
+if test -z "$XAPIAN_SRCDIR"; then
+	XAPIAN_SRCDIR="$(pwd)/$(dirname -- $(find .. -type d -name queryparser -depth 2 | grep xapian-core | head -n1))"
+	if test -z "$XAPIAN_SRCDIR"; then
+		AC_MSG_ERROR([xapian-core source code directory not found, define XAPIAN_SRCDIR environment variable])
+	fi
+fi
+
 # Checks for programs.
 AC_PROG_CXX
 
 # Checks for libraries.
+AC_CHECK_LIB(pthread, pthread_create,,[AC_MSG_ERROR([pthread not found, Xapiand requires pthread])],[-lpthread])
+AC_CHECK_LIB(ev, ev_run,,[AC_MSG_ERROR([libev not found, Xapiand requires libev])],[-lev])
 
 # Checks for header files.
 AC_CHECK_HEADERS([fcntl.h limits.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])
 
-# Check for xapian-core.
+# Check for xapian.
 XO_LIB_XAPIAN([], [], [xapian-config-1.3])
+
+# Checks for library functions.
+AC_CHECK_FUNCS([getcwd gettimeofday socket])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
 AC_C_INLINE
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
-
-# Checks for library functions.
-AC_CHECK_FUNCS([getcwd gettimeofday socket])
 
 AC_OUTPUT(Makefile)
