Automake without dependency tracking (breaks, as in http://mytestbed.net/issues/1327)

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,12 @@ xapiand_SOURCES = xapiand.cc \
 	threadpool.cc \
 	$(XAPIAN_SRCDIR)/net/length.cc
 
+noinst_HEADERS = database.h \
+	endpoint.h \
+	queue.h \
+	server.h \
+	threadpool.h
+
 AM_LDFLAGS = $(XAPIAN_LIBS)
 
 AM_CXXFLAGS = -DXAPIAN_LIB_BUILD \
