--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,8 @@ EXTRA_DIST = Xapiand.xcodeproj/project.pbxproj
 
 AM_LDFLAGS = $(XAPIAN_LIBS)
 
-AM_CXXFLAGS = -DXAPIAN_LIB_BUILD \
+AM_CXXFLAGS = -std=c++11 \
+	-DXAPIAN_LIB_BUILD \
 	-I$(XAPIAN_SRCDIR)/ \
 	-I$(XAPIAN_SRCDIR)/common
 AM_CXXFLAGS += $(XAPIAN_CXXFLAGS)
