Added xapian databases to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 /Xapiand.xcodeproj/xcuserdata
 /Xapiand.xcodeproj/project.xcworkspace
 
+# Xapian Databases
+*.baseA
+*.baseB
+*.DB
+
 # Compiled Object files
 *.slo
 *.lo
