Check for STDCXX_11 using AX_CXX_COMPILE_STDCXX_11 macro.
Important: This needs `autoconf-archive` installed.
Under OS X:
  brew install automake autoconf autoconf-archive

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,5 +42,4 @@ EXTRA_DIST = Xapiand.xcodeproj/project.pbxproj
 
 AM_LDFLAGS = $(XAPIAN_LIBS) -lpcre
 
-AM_CXXFLAGS = -std=c++11
-AM_CXXFLAGS += $(XAPIAN_CXXFLAGS)
+AM_CXXFLAGS = $(XAPIAN_CXXFLAGS)
