Added discovery module to project (empty)

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ xapiand_SOURCES = xapiand.cc \
 	endpoint.cc \
 	database.cc \
 	manager.cc \
+	discovery.cc \
 	server.cc \
 	threadpool.cc \
 	client_base.cc \
@@ -25,6 +26,7 @@ noinst_HEADERS = xapiand.h \
 	endpoint.h \
 	database.h \
 	manager.h \
+	discovery.h \
 	server.h \
 	threadpool.h \
 	client_base.h \
