--- a/configure.ac
+++ b/configure.ac
@@ -6,8 +6,8 @@
 
 AC_PREREQ([2.69])
 AC_INIT([Xapiand], [3.0.0-alpha], [https://github.com/Kronuz/Xapiand])
-AC_CONFIG_SRCDIR([xapiand.cc])
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_SRCDIR([src/xapiand.cc])
+AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_MACRO_DIRS([m4])
 
 LT_INIT
@@ -59,4 +59,8 @@ AC_LINK_IFELSE(
 CXXFLAGS="$save_CXXFLAGS"
 LIBS="$save_LIBS"
 
-AC_OUTPUT(Makefile)
+AC_CONFIG_FILES([
+	Makefile
+	src/Makefile
+])
+AC_OUTPUT
