Test of WKT parser is add to check

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,7 +2,7 @@
 
 TESTS = check_tests
 check_PROGRAMS = check_tests
-check_tests_SOURCES = check_tests.cc $(top_builddir)/src/utils.cc $(top_builddir)/src/md5.cc $(top_builddir)/src/cartesian.cc $(top_builddir)/src/exception.cc $(top_builddir)/src/geometry.cc $(top_builddir)/src/htm.cc test_serialise.cc test_htm.cc
+check_tests_SOURCES = check_tests.cc $(top_builddir)/src/utils.cc $(top_builddir)/src/md5.cc $(top_builddir)/src/cartesian.cc $(top_builddir)/src/exception.cc $(top_builddir)/src/geometry.cc $(top_builddir)/src/htm.cc $(top_builddir)/src/wkt_parser.cc  test_serialise.cc test_htm.cc test_wkt_parser.cc
 #check_tests_HEADERS = $(top_builddir)/src/utils.h $(top_builddir)/src/xapian.h
 check_tests_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/src/
 check_tests_LDADD = @CHECK_LIBS@
