--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,65 +2,63 @@ ACLOCAL_AMFLAGS = -I ../m4
 
 bin_PROGRAMS = xapiand
 xapiand_SOURCES = \
+	cartesian.cc \
 	cJSON.c \
 	cJSON_Utils.c \
 	client_base.cc \
 	client_binary.cc \
 	client_http.cc \
 	database.cc \
+	datetime.cc \
 	endpoint.cc \
 	endpoint_resolver.cc \
+	exception.cc \
 	fields.cc \
+	geometry.cc \
+	htm.cc \
 	http_parser.c \
 	length.cc \
-	\
 	manager.cc \
 	md5.cc \
 	multivalue.cc \
-	\
+	multivaluekeymaker.cc \
 	replicator.cc \
 	server.cc \
 	threadpool.cc \
 	times.cc \
 	utils.cc \
-	\
-	exception.cc \
-	cartesian.cc \
-	geometry.cc \
-	htm.cc \
 	wkt_parser.cc \
-	datetime.cc \
-	\
 	xapiand.cc
 
 noinst_HEADERS = \
+	cartesian.h \
 	cJSON.h \
 	cJSON_Utils.h \
 	client_base.h \
 	client_binary.h \
 	client_http.h \
 	database.h \
+	datetime.h \
 	endpoint.h \
 	endpoint_resolver.h \
+	exception.h \
 	fields.h \
+	geometry.h \
+	htm.h \
 	http_parser.h \
 	length.h \
 	lru.h \
 	manager.h \
 	md5.h \
 	multivalue.h \
+	multivaluekeymaker.h \
 	queue.h \
 	replicator.h \
 	server.h \
 	threadpool.h \
 	times.h \
 	utils.h \
-	exception.h \
-	cartesian.h \
-	geometry.h \
-	htm.h \
 	wkt_parser.h \
-	datetime.h \
 	worker.h \
 	xapiand.h
 
