set_htm_test, set_wkt_test and set serialise_test were added in makefile.am

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,13 @@ AUTOMAKE_OPTIONS = -Wno-portability
 check:
 	$(shell rm -rf .db_test1.db .db_test2.db)
 
-check_PROGRAMS = set_general_test set_generate_terms_test set_geo_test set_query_test
+check_PROGRAMS = set_generate_terms_test \
+				 set_geo_test \
+				 set_htm_test \
+				 set_query_test \
+				 set_serialise_unserialise_test \
+				 set_wkt_test
+
 TESTS = $(check_PROGRAMS)
 
 headers =   $(top_builddir)/src/cartesian.cc \
@@ -31,17 +37,23 @@ headers =   $(top_builddir)/src/cartesian.cc \
 			$(top_builddir)/src/utils.cc \
 			$(top_builddir)/src/wkt_parser.cc
 
-set_general_test_SOURCES = $(headers) set_general_test.cc test_serialise.cc test_htm.cc test_wkt_parser.cc
-set_general_test_LDADD = @CHECK_LIBS@
-
 set_generate_terms_test_SOURCES = $(headers) set_generate_terms_test.cc test_generate_terms.cc
 set_generate_terms_test_LDADD = @CHECK_LIBS@
 
 set_geo_test_SOURCES = $(headers) set_geo_test.cc test_geo.cc
 set_geo_test_LDADD = @CHECK_LIBS@
 
+set_htm_test_SOURCES = $(headers) set_htm_test.cc test_htm.cc
+set_htm_test_LDADD = @CHECK_LIBS@
+
 set_query_test_SOURCES = $(headers) set_query_test.cc test_query.cc
 set_query_test_LDADD = @CHECK_LIBS@
+
+set_serialise_unserialise_test_SOURCES = $(headers) set_serialise_unserialise_test.cc test_serialise.cc
+set_serialise_unserialise_test_LDADD = @CHECK_LIBS@
+
+set_wkt_test_SOURCES = $(headers) set_wkt_test.cc test_wkt_parser.cc
+set_wkt_test_LDADD = @CHECK_LIBS@
 
 AM_LDFLAGS = $(XAPIAN_LIBS)
 AM_CXXFLAGS = $(XAPIAN_CXXFLAGS)
