--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,28 @@ xapiand_SOURCES = \
 	multivalue.cc \
 	multivaluekeymaker.cc \
 	multivaluerange.cc \
+	pcre/pcre_byte_order.c \
+	pcre/pcre_chartables.c \
+	pcre/pcre_compile.c \
+	pcre/pcre_config.c \
+	pcre/pcre_dfa_exec.c \
+	pcre/pcre_exec.c \
+	pcre/pcre_fullinfo.c \
+	pcre/pcre_get.c \
+	pcre/pcre_globals.c \
+	pcre/pcre_maketables.c \
+	pcre/pcre_newline.c \
+	pcre/pcre_ord2utf8.c \
+	pcre/pcre_printint.c \
+	pcre/pcre_refcount.c \
+	pcre/pcre_string_utils.c \
+	pcre/pcre_study.c \
+	pcre/pcre_tables.c \
+	pcre/pcre_ucd.c \
+	pcre/pcre_valid_utf8.c \
+	pcre/pcre_version.c \
+	pcre/pcre_xclass.c \
+	pcre/pcreposix.c \
 	replicator.cc \
 	serialise.cc \
 	server.cc \
@@ -85,6 +107,11 @@ noinst_HEADERS = \
 	multivalue.h \
 	multivaluekeymaker.h \
 	multivaluerange.h \
+	pcre/pcre.h \
+	pcre/pcre_internal.h \
+	pcre/pcre_scanner.h \
+	pcre/pcreposix.h \
+	pcre/ucp.h \
 	queue.h \
 	replicator.h \
 	serialise.cc \
